syntax = "proto3";

package notification;

service NotificationService {
  rpc SendEmail(SendEmailRequest) returns (SendEmailResponse);
  rpc SendAdminAlert(SendAdminAlertRequest) returns (SendEmailResponse);
}

message SendEmailRequest {
  string template_name = 1;
  repeated string recipients = 2;
  map<string, string> template_data = 3;
  string triggered_by = 4;
  string reference_id = 5;
}

message SendAdminAlertRequest {
  string alert_type = 1;
  string message = 2;
  map<string, string> data = 3;
}

message SendEmailResponse {
  bool success = 1;
  string message = 2;
  string notification_id = 3;
}

